fix: top toolbar z-index

--- a/interface/themes/ajax_calendar_sass.scss
+++ b/interface/themes/ajax_calendar_sass.scss
@@ -63,6 +63,7 @@ div.tiny {
     width: 100%;
     border-bottom: 1px solid $black;
     padding: 0.3125rem 0 0.1875rem 0;
+    z-index: 3;
 }
 
 #dateNAV {
